--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "auth0-js": "^9.12.2",
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.5",
+    "gatsby-plugin-env-variables": "^1.0.1",
     "gatsby-plugin-manifest": "^2.2.38",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
